...
        navigationController?.navigationBar.isTranslucent = false
        
        self.navigationController?.setNavigationBarHidden(false, animated: true)
        navigationController?.navigationBar.setBackgroundImage(UIImage(), for: UIBarMetrics.default)
        navigationController?.navigationBar.shadowImage = UIImage()
        
        let image = UIImage(named: "plus")
        let button = UIButton(type: .system)
        button.setImage(image, for: .normal)
        button.tintColor = UIColor.black
        let tapGesture = CustomTapGestureRecognizer(target: self,
                                                    action: #selector(tapSelector(sender:)))
        tapGesture.ourCustomValue = delegate
...
